--- a/docs/images/resume/file.tex
+++ b/docs/images/resume/file.tex
@@ -142,18 +142,20 @@ In 2012, I created clivern.com to share my projects and tutorials about web deve
 \item Extend data processing capabilities to provide rich reports on malware through static and dynamic analysis.
 \item Build tools and infrastructure to run diverse workloads, managing over 10PB of data, running millions of VMs a day and processing TBs of data every hour.
 \item Build web services to help users effectively interact with Sandbox.
-\item Build tools to customize and analyze operating systems and hypervisors for malware analysis (Windows, Unix, Android, qemu etc.).
 \end{itemize}}
 \sepspace
 
 \WorkEntry{Software Engineer}{May 2022 - Sep 2025}{Cisco, Amsterdam, Netherlands}{\begin{itemize}
-\item Responsible for the design and operation of the Monitoring and Observability Platform for Cisco OpenDNS resolvers globally (Cisco Umbrella DNS).
+\item Designed and operated the automation services of the Monitoring and Observability Platform for Cisco OpenDNS resolvers globally (Cisco Umbrella DNS).
+\item Created automation tooling for monitoring systems (Naemon/Nagios, LGTM Stack, Grafana Cloud, Datadog) ensuring reliability, High Availability and GitOps-based change management.
+\item Built chaos engineering service to assess any monitoring system efficiency and system resilience through random reboots, traffic drops, latency injection, and resource spikes.
+\item Developed Scuti, an automated patching system for virtual servers supporting OS upgrades and custom scripts with sequential, batch, and percentage-based deployment strategies.
+\item Built Oncall AI assistant to help Oncall engineers with automated troubleshooting and incident response.
 \item Working mainly with Go, Python and Elixir.
 \item Gin, FastAPI, Django, Phoenix Frameworks, PostgreSQL, MySQL Databases.
 \item Nagios, Thruk, Naemon, Grafana, Prometheus, Alertmanager, Datadog.
 \item AWS (EC2, RDS, S3, EKS).
 \item Terraform, Ansible, Jenkins, GitOps for Infrastructure Automation.
-\item Linux (Debian) and build/packaging utilities.
 \item Participated in on-call shifts.
 \end{itemize}}
 \sepspace
