--- a/docs/images/resume/file.tex
+++ b/docs/images/resume/file.tex
@@ -138,7 +138,7 @@ In 2012, I created clivern.com to share my projects and tutorials about web deve
 %%% ------------------------------------------------------------
 \NewPart{Experience}{}
 
-\WorkEntry{Software Engineer}{Sep 2025 - Present}{Recorded Future}{\begin{itemize}
+\WorkEntry{Software Engineer}{Sep 2025 - Nov, 2025}{Recorded Future}{\begin{itemize}
 \item Extend data processing capabilities to provide rich reports on malware through static and dynamic analysis.
 \item Build tools and infrastructure to run diverse workloads, managing over 10PB of data, running millions of VMs a day and processing TBs of data every hour.
 \item Build web services to help users effectively interact with Sandbox.
