--- a/docs/images/resume/file.tex
+++ b/docs/images/resume/file.tex
@@ -139,11 +139,10 @@ In 2012, I created clivern.com to share my projects and tutorials about web deve
 \NewPart{Experience}{}
 
 \WorkEntry{Software Engineer}{Jan 2026 - Present}{HousingAnywhere, Rotterdam, Netherlands}{\begin{itemize}
-\item Building distributed systems and solving complex distributed problems.
-\item Ensuring data quality and leveraging data insights for business decisions.
-\item Working with Go, PostgreSQL and Redis for backend development.
+\item Joined the Booking Experience team, working on the Booking Platform.
 \item Using RESTful APIs and gRPC for service communication.
-\item Deploying and managing services with Docker and Kubernetes.
+\item Working with Go, Gin Framework, PostgreSQL, Redis, Github and Jenkins for backend development.
+\item Deploying and managing services with Kubernetes on Google Cloud.
 \end{itemize}}
 \sepspace
 
