--- a/docs/images/resume/file.tex
+++ b/docs/images/resume/file.tex
@@ -138,7 +138,16 @@ In 2012, I created clivern.com to share my projects and tutorials about web deve
 %%% ------------------------------------------------------------
 \NewPart{Experience}{}
 
-\WorkEntry{Software Engineer}{Sep 2025 - Nov 2025}{Recorded Future}{\begin{itemize}
+\WorkEntry{Software Engineer}{Jan 2026 - Present}{HousingAnywhere, Rotterdam, Netherlands}{\begin{itemize}
+\item Building distributed systems and solving complex distributed problems.
+\item Ensuring data quality and leveraging data insights for business decisions.
+\item Working with Go, PostgreSQL and Redis for backend development.
+\item Using RESTful APIs and gRPC for service communication.
+\item Deploying and managing services with Docker and Kubernetes.
+\end{itemize}}
+\sepspace
+
+\WorkEntry{Software Engineer}{Sep 2025 - Nov 2025}{Recorded Future, Amsterdam, Netherlands}{\begin{itemize}
 \item Extend data processing capabilities to provide rich reports on malware through static and dynamic analysis.
 \item Build tools and infrastructure to run diverse workloads, managing over 10PB of data, running millions of VMs a day and processing TBs of data every hour.
 \item Build web services to help users effectively interact with Sandbox.
